*) more logging and better error handling in parser-core *) junit tests for parsercore added
git-svn-id: svn://svn.paxle.net/paxle/trunk@1835 f5d3ab42-bacf-4b1a-9692-565be65a0cfe